--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,6 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Creator of Character Builder Test"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +19,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Primary Meta Tags -->
     <title>Character Builder Using React</title>
+    <meta name="title" content="Character Builder Using React">
+    <meta name="description" content="Creator of Character Builder Test">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cranky-kare-ac5f34.netlify.app">
+    <meta property="og:title" content="Character Builder Using React">
+    <meta property="og:description" content="Creator of Character Builder Test">
+    <meta property="og:image" content="https://cranky-kare-ac5f34.netlify.app/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://cranky-kare-ac5f34.netlify.app">
+    <meta property="twitter:title" content="Character Builder Using React">
+    <meta property="twitter:description" content="Creator of Character Builder Test">
+    <meta property="twitter:image" content="https://cranky-kare-ac5f34.netlify.app/logo.png">
+
+
+
+
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
